sum of cross entropy updated

--- a/1D Normal Distribution.ipynb
+++ b/1D Normal Distribution.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "_kJTMabMoqjs"
       },
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "9QUEuKG2oqju"
       },
@@ -54,14 +54,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
         "id": "nseXbiT8oqju",
-        "outputId": "91e52cca-9585-4009-da08-599379281835"
+        "outputId": "f63e48c6-fb42-48c7-a306-d8bb6c229dd0"
       },
       "outputs": [
         {
@@ -90,14 +90,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 490
         },
         "id": "YJYCOsw0oqjv",
-        "outputId": "7c94d749-487e-49a7-b304-05e8eb051910"
+        "outputId": "4489e935-becb-4200-c837-6f12db3ef182"
       },
       "outputs": [
         {
@@ -114,7 +114,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(159.71404066693964, 492.68200822999324, 284.62601305357305)\n"
+            "(652.3960488969328, 444.3400537205127, 777.3080212835663)\n"
           ]
         }
       ],
@@ -146,7 +146,7 @@
         "plt.ylabel ('Cross Entropy')\n",
         "plt.show()\n",
         "\n",
-        "print((val_1, val_2, val_3))"
+        "print((val_1 + val_2, val_1 + val_3, val_2 + val_3))"
       ]
     },
     {
@@ -167,7 +167,7 @@
           "height": 490
         },
         "id": "thzNt9Ypoqjw",
-        "outputId": "2fa9c36f-c746-4776-a432-5d784f13fb32"
+        "outputId": "6b6dacd4-2a02-414f-a18f-20431ae87b99"
       },
       "outputs": [
         {
@@ -184,7 +184,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(159.71404066693964, 492.68200822999324, 284.62601305357305)\n"
+            "(222.8605466240572, 224.94167917452927, 274.26736299350125)\n"
           ]
         }
       ],
@@ -209,9 +209,9 @@
         "  H_45.append(- pdf_4[i] * math.log(pdf_5[i]))\n",
         "  H_46.append(- pdf_4[i] * math.log(pdf_6[i]))\n",
         "  H_56.append(- pdf_5[i] * math.log(pdf_6[i]))\n",
-        "  val_4 += H_12[i]\n",
-        "  val_5 += H_13[i]\n",
-        "  val_6 += H_23[i]\n",
+        "  val_4 += H_45[i]\n",
+        "  val_5 += H_46[i]\n",
+        "  val_6 += H_56[i]\n",
         "\n",
         "plt.plot(x, H_45, label = 'pdf_4 & pdf_5')\n",
         "plt.plot(x, H_46, label = 'pdf_4 & pdf_6')\n",
@@ -222,7 +222,7 @@
         "plt.ylabel ('Cross Entropy')\n",
         "plt.show()\n",
         "\n",
-        "print((val_4, val_5, val_6))"
+        "print((val_4 + val_5, val_4 + val_6, val_5 + val_6))"
       ]
     }
   ],
