added paths to prob cubes of transient classes

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -33,11 +33,12 @@
         "import scipy.stats as sps"
       ],
       "metadata": {
-        "id": "UOPa0lzRgSmB",
-        "outputId": "e94af609-5028-41a6-b614-972e05585305",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "UOPa0lzRgSmB",
+        "outputId": "e94af609-5028-41a6-b614-972e05585305"
       },
       "execution_count": 1,
       "outputs": [
@@ -181,11 +182,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "fDWY7G441fHM",
-        "outputId": "15d7afa4-b964-451e-d8aa-f142eae82143",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fDWY7G441fHM",
+        "outputId": "15d7afa4-b964-451e-d8aa-f142eae82143"
       },
       "execution_count": 2,
       "outputs": [
@@ -197,6 +198,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Paths for the Probability Cubes of some transient classes\n",
+        "# SNII and SNIbc are both supernovae and are similar. AGN is very different from the other two\n",
+        "\n",
+        "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl/\"\n",
+        "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl/\"\n",
+        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl/\""
+      ],
+      "metadata": {
+        "id": "YW0PP-D7BDba"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4O7xMpFqEqTR"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ],
   "metadata": {
