pickle file path corrected

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -205,14 +205,14 @@
         "# Paths for the Probability Cubes of some transient classes\n",
         "# SNII and SNIbc are both supernovae and are similar. AGN is very different from the other two\n",
         "\n",
-        "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl/\"\n",
-        "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl/\"\n",
-        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl/\""
+        "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
+        "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
+        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
       ],
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -224,40 +224,9 @@
         "    HashTable = pickle.load(f)"
       ],
       "metadata": {
-        "id": "4O7xMpFqEqTR",
-        "outputId": "661a8580-bc28-4eb1-c929-1c5bcb067bd1",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 216
-        }
+        "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NotADirectoryError",
-          "evalue": "[Errno 20] Not a directory: '/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl/'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-3c2d37fa3b84>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mEventNames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mCoordinateDict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mHashTable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: '/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl/'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with open('/content/drive/MyDrive/Datacubes/ProbabilityCube_SNIa_1slice.pkl', 'rb') as f:\n",
-        "    EventNames = pickle.load(f)\n",
-        "    CoordinateDict = pickle.load(f)\n",
-        "    HashTable = pickle.load(f)"
-      ],
-      "metadata": {
-        "id": "na3di0IScD7K"
-      },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     }
   ],
