found out the number of data of Data2

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -36,7 +36,7 @@
         "collapsed": true,
         "id": "UOPa0lzRgSmB"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "6108b575-c83a-44a1-e3cc-7d8a447cdc01"
+        "outputId": "a2478972-3477-4ced-dc76-50454fdefc0b"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -90,14 +90,14 @@
         "    CoordinateDict2 = pickle.load(f2)\n",
         "    Data2 = pickle.load(f2)\n",
         "\n",
-        "with open(data3, 'rb') as f3:\n",
-        "    CoordinateDict3 = pickle.load(f3)\n",
-        "    Data3 = pickle.load(f3)"
+        "#with open(data3, 'rb') as f3:\n",
+        "#    CoordinateDict3 = pickle.load(f3)\n",
+        "#    Data3 = pickle.load(f3)"
       ],
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,7 +234,7 @@
       "metadata": {
         "id": "lxw8OLSOl1ly"
       },
-      "execution_count": 10,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -249,7 +249,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,7 +278,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -330,7 +330,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,6 +427,54 @@
             "    >>> (a > 3).nonzero()\n",
             "    (array([1, 1, 1, 2, 2, 2]), array([0, 1, 2, 0, 1, 2]))\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count_nonzero = np.sum(Data2 != 0)\n",
+        "count_0 = np.sum(Data2 == 0)\n",
+        "print((count_0, count_nonzero, count_0 + count_nonzero))"
+      ],
+      "metadata": {
+        "id": "uPpBU2I5U97U",
+        "outputId": "7b8b3d99-f45d-4e97-9737-94e6701d3200",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(407953741, 13741379, 421695120)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(float(10 ** (-16)))"
+      ],
+      "metadata": {
+        "id": "6KPTakj_XRUO",
+        "outputId": "5b5144bf-b77d-4527-ec4c-c834370c672d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1e-16\n"
           ]
         }
       ]
