first attempt to change 0 into a float in Data 2

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -18,19 +18,19 @@
         "\n",
         "# from pzflow import Flow\n",
         "# import jax.numpy as jnp\n",
-        "import pandas as pd\n",
+        "# import pandas as pd\n",
         "import numpy as np\n",
         "import pickle\n",
         "# import corner\n",
-        "import matplotlib.pyplot as plt\n",
-        "import os\n",
-        "from astropy.table import Table\n",
+        "# import matplotlib.pyplot as plt\n",
+        "# import os\n",
+        "# from astropy.table import Table\n",
         "# from pzflow import Flow, FlowEnsemble\n",
         "# # from pzflow.distributions import Uniform\n",
         "# from pzflow.bijectors import Chain, StandardScaler, NeuralSplineCoupling, ColorTransform, InvSoftplus, RollingSplineCoupling, ShiftBounds\n",
-        "from collections import namedtuple\n",
+        "# from collections import namedtuple\n",
         "\n",
-        "import scipy.stats as sps"
+        "# import scipy.stats as sps"
       ],
       "metadata": {
         "collapsed": true,
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "a2478972-3477-4ced-dc76-50454fdefc0b"
+        "outputId": "28a7cb8d-4d2e-4ba2-f043-3c51e425cb3c"
       },
       "execution_count": 2,
       "outputs": [
@@ -58,7 +58,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -69,9 +69,9 @@
         "# Paths for the Probability Cubes of some transient classes\n",
         "# SNII and SNIbc are both supernovae and are similar. AGN is very different from the other two\n",
         "\n",
-        "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
+        "# data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
         "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
-        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
+        "# data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
       ],
       "metadata": {
         "id": "YW0PP-D7BDba"
@@ -82,9 +82,9 @@
     {
       "cell_type": "code",
       "source": [
-        "with open(data1, 'rb') as f1:\n",
-        "    CoordinateDict1 = pickle.load(f1)\n",
-        "    Data1 = pickle.load(f1)\n",
+        "#with open(data1, 'rb') as f1:\n",
+        "#    CoordinateDict1 = pickle.load(f1)\n",
+        "#    Data1 = pickle.load(f1)\n",
         "\n",
         "with open(data2, 'rb') as f2:\n",
         "    CoordinateDict2 = pickle.load(f2)\n",
@@ -439,11 +439,11 @@
         "print((count_0, count_nonzero, count_0 + count_nonzero))"
       ],
       "metadata": {
-        "id": "uPpBU2I5U97U",
-        "outputId": "7b8b3d99-f45d-4e97-9737-94e6701d3200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uPpBU2I5U97U",
+        "outputId": "72495f37-06a3-461e-c4c5-5d4ade497c3c"
       },
       "execution_count": 6,
       "outputs": [
@@ -459,25 +459,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(float(10 ** (-16)))"
+        "x = np.where(Data2 == 0)"
       ],
       "metadata": {
-        "id": "6KPTakj_XRUO",
-        "outputId": "5b5144bf-b77d-4527-ec4c-c834370c672d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "sqpnCG-OtHiS"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1e-16\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Data2[x] = 1e-16"
+      ],
+      "metadata": {
+        "id": "7dT7luBmwY2z"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
