counting data 1 and data 3

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "28a7cb8d-4d2e-4ba2-f043-3c51e425cb3c"
+        "outputId": "3f979c14-101a-45e8-9b70-f564ad8651ea"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,35 +69,35 @@
         "# Paths for the Probability Cubes of some transient classes\n",
         "# SNII and SNIbc are both supernovae and are similar. AGN is very different from the other two\n",
         "\n",
-        "# data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
-        "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
-        "# data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
+        "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
+        "# data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
+        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
       ],
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#with open(data1, 'rb') as f1:\n",
-        "#    CoordinateDict1 = pickle.load(f1)\n",
-        "#    Data1 = pickle.load(f1)\n",
+        "with open(data1, 'rb') as f1:\n",
+        "    CoordinateDict1 = pickle.load(f1)\n",
+        "    Data1 = pickle.load(f1)\n",
         "\n",
-        "with open(data2, 'rb') as f2:\n",
-        "    CoordinateDict2 = pickle.load(f2)\n",
-        "    Data2 = pickle.load(f2)\n",
+        "#with open(data2, 'rb') as f2:\n",
+        "#    CoordinateDict2 = pickle.load(f2)\n",
+        "#    Data2 = pickle.load(f2)\n",
         "\n",
-        "#with open(data3, 'rb') as f3:\n",
-        "#    CoordinateDict3 = pickle.load(f3)\n",
-        "#    Data3 = pickle.load(f3)"
+        "with open(data3, 'rb') as f3:\n",
+        "    CoordinateDict3 = pickle.load(f3)\n",
+        "    Data3 = pickle.load(f3)"
       ],
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -434,24 +434,29 @@
     {
       "cell_type": "code",
       "source": [
-        "count_nonzero = np.sum(Data2 != 0)\n",
-        "count_0 = np.sum(Data2 == 0)\n",
-        "print((count_0, count_nonzero, count_0 + count_nonzero))"
+        "count_nonzero1 = np.sum(Data1 != 0)\n",
+        "count_01 = np.sum(Data1 == 0)\n",
+        "print((count_01, count_nonzero1, count_01 + count_nonzero1))\n",
+        "\n",
+        "count_nonzero3 = np.sum(Data3 != 0)\n",
+        "count_03 = np.sum(Data3 == 0)\n",
+        "print((count_03, count_nonzero3, count_03 + count_nonzero3))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uPpBU2I5U97U",
-        "outputId": "72495f37-06a3-461e-c4c5-5d4ade497c3c"
+        "outputId": "91d3b0a8-45e4-4e2a-f033-b6b96098109f"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(407953741, 13741379, 421695120)\n"
+            "(408921098, 12774022, 421695120)\n",
+            "(420485763, 1209357, 421695120)\n"
           ]
         }
       ]
