not enough RAM solved, still have problem with 0

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "3f979c14-101a-45e8-9b70-f564ad8651ea"
+        "outputId": "5a107810-5661-4798-aae4-898162e93519"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,13 +70,13 @@
         "# SNII and SNIbc are both supernovae and are similar. AGN is very different from the other two\n",
         "\n",
         "data1 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1815__SNII-Templates.pkl\"\n",
-        "# data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
-        "data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
+        "data2 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_0821__SNIbc-Templates.pkl\"\n",
+        "# data3 = \"/content/drive/MyDrive/Datacubes/FullRunTest_1000ObjNo/ProbCube_1229_1819__AGN.pkl\""
       ],
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -86,18 +86,18 @@
         "    CoordinateDict1 = pickle.load(f1)\n",
         "    Data1 = pickle.load(f1)\n",
         "\n",
-        "#with open(data2, 'rb') as f2:\n",
-        "#    CoordinateDict2 = pickle.load(f2)\n",
-        "#    Data2 = pickle.load(f2)\n",
+        "with open(data2, 'rb') as f2:\n",
+        "    CoordinateDict2 = pickle.load(f2)\n",
+        "    Data2 = pickle.load(f2)\n",
         "\n",
-        "with open(data3, 'rb') as f3:\n",
-        "    CoordinateDict3 = pickle.load(f3)\n",
-        "    Data3 = pickle.load(f3)"
+        "#with open(data3, 'rb') as f3:\n",
+        "#    CoordinateDict3 = pickle.load(f3)\n",
+        "#    Data3 = pickle.load(f3)"
       ],
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -482,6 +482,114 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(len(Data2))"
+      ],
+      "metadata": {
+        "id": "aahjvWDmkn1u",
+        "outputId": "39113ddc-265e-44a7-c0aa-189200086d8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "part1 = Data2[:14]\n",
+        "part2 = Data2[14:]"
+      ],
+      "metadata": {
+        "id": "5sYIQBxLktqm"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "part1[np.where(part1 == 0)] = 1e-15"
+      ],
+      "metadata": {
+        "id": "5rpjc1ySlCoA"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "part2[np.where(part2 == 0)] = 1e-15"
+      ],
+      "metadata": {
+        "id": "REiL2FU_lZHL"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(len(part1)):\n",
+        "  Data2[i] = part1[i]\n",
+        "  Data2[14+i] = part2[i]"
+      ],
+      "metadata": {
+        "id": "4q7pkqepm_9A"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del part1\n",
+        "del part2"
+      ],
+      "metadata": {
+        "id": "MYIwBik1mi_d"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "H1 = Data1 * np.log(Data2)"
+      ],
+      "metadata": {
+        "id": "HIc3cVe3mnIp",
+        "outputId": "6e742a62-bdb8-4014-af10-8464792cea91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-19-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
+            "  H1 = Data1 * np.log(Data2)\n",
+            "<ipython-input-19-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
+            "  H1 = Data1 * np.log(Data2)\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
