--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -489,11 +489,11 @@
         "print(len(Data2))"
       ],
       "metadata": {
-        "id": "aahjvWDmkn1u",
-        "outputId": "39113ddc-265e-44a7-c0aa-189200086d8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aahjvWDmkn1u",
+        "outputId": "39113ddc-265e-44a7-c0aa-189200086d8d"
       },
       "execution_count": 6,
       "outputs": [
@@ -515,29 +515,29 @@
       "metadata": {
         "id": "5sYIQBxLktqm"
       },
-      "execution_count": 14,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part1[np.where(part1 == 0)] = 1e-15"
+        "part1[np.where(part1 == 0)] = 1"
       ],
       "metadata": {
         "id": "5rpjc1ySlCoA"
       },
-      "execution_count": 15,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part2[np.where(part2 == 0)] = 1e-15"
+        "part2[np.where(part2 == 0)] = 1"
       ],
       "metadata": {
         "id": "REiL2FU_lZHL"
       },
-      "execution_count": 16,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
       "metadata": {
         "id": "4q7pkqepm_9A"
       },
-      "execution_count": 17,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "MYIwBik1mi_d"
       },
-      "execution_count": 18,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -571,25 +571,23 @@
         "H1 = Data1 * np.log(Data2)"
       ],
       "metadata": {
-        "id": "HIc3cVe3mnIp",
-        "outputId": "6e742a62-bdb8-4014-af10-8464792cea91",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "HIc3cVe3mnIp"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-19-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
-            "  H1 = Data1 * np.log(Data2)\n",
-            "<ipython-input-19-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
-            "  H1 = Data1 * np.log(Data2)\n"
-          ]
-        }
-      ]
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del H1\n",
+        "del Data1\n",
+        "del Data2"
+      ],
+      "metadata": {
+        "id": "uFaD6cvgn6YR"
+      },
+      "execution_count": 30,
+      "outputs": []
     }
   ],
   "metadata": {
