1e-5 is also too small

--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 31,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -515,29 +515,29 @@
       "metadata": {
         "id": "5sYIQBxLktqm"
       },
-      "execution_count": 32,
+      "execution_count": 40,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part1[np.where(part1 == 0)] = 1"
+        "part1[np.where(part1 == 0)] = 1e-5"
       ],
       "metadata": {
         "id": "5rpjc1ySlCoA"
       },
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part2[np.where(part2 == 0)] = 1"
+        "part2[np.where(part2 == 0)] = 1e-5"
       ],
       "metadata": {
         "id": "REiL2FU_lZHL"
       },
-      "execution_count": 34,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
       "metadata": {
         "id": "4q7pkqepm_9A"
       },
-      "execution_count": 35,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -562,7 +562,7 @@
       "metadata": {
         "id": "MYIwBik1mi_d"
       },
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -571,10 +571,25 @@
         "H1 = Data1 * np.log(Data2)"
       ],
       "metadata": {
-        "id": "HIc3cVe3mnIp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HIc3cVe3mnIp",
+        "outputId": "4f249ea8-ce85-4758-cff5-2234fc05d1fa"
       },
-      "execution_count": 37,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-45-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
+            "  H1 = Data1 * np.log(Data2)\n",
+            "<ipython-input-45-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
+            "  H1 = Data1 * np.log(Data2)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -586,7 +601,7 @@
       "metadata": {
         "id": "uFaD6cvgn6YR"
       },
-      "execution_count": 30,
+      "execution_count": 38,
       "outputs": []
     }
   ],
