--- a/cross_entropy_btw_supernovae.ipynb
+++ b/cross_entropy_btw_supernovae.ipynb
@@ -22,7 +22,7 @@
         "import numpy as np\n",
         "import pickle\n",
         "# import corner\n",
-        "# import matplotlib.pyplot as plt\n",
+        "import matplotlib.pyplot as plt\n",
         "# import os\n",
         "# from astropy.table import Table\n",
         "# from pzflow import Flow, FlowEnsemble\n",
@@ -36,7 +36,7 @@
         "collapsed": true,
         "id": "UOPa0lzRgSmB"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -50,7 +50,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fDWY7G441fHM",
-        "outputId": "5a107810-5661-4798-aae4-898162e93519"
+        "outputId": "8aa20f55-c212-442d-cfe2-8628c383c11c"
       },
       "execution_count": 2,
       "outputs": [
@@ -58,7 +58,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "YW0PP-D7BDba"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -97,7 +97,39 @@
       "metadata": {
         "id": "4O7xMpFqEqTR"
       },
-      "execution_count": 39,
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def normalize(data):\n",
+        "  for i in range(len(data)):\n",
+        "    for j in range(len(data[0])):\n",
+        "      for k in range(len(data[0][0])):\n",
+        "        total = sum(data[i][j][k])\n",
+        "        if (total != 0):\n",
+        "          factor = 1 / total\n",
+        "          for l in range(len(data[0][0][0])):\n",
+        "            data[i][j][k][l] *= factor\n",
+        "  return None"
+      ],
+      "metadata": {
+        "id": "MxzI18B8f57O"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "normalize(Data1)\n",
+        "normalize(Data2)"
+      ],
+      "metadata": {
+        "id": "7-7fKNFRg5nb"
+      },
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -234,7 +266,7 @@
       "metadata": {
         "id": "lxw8OLSOl1ly"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +481,7 @@
         "id": "uPpBU2I5U97U",
         "outputId": "91d3b0a8-45e4-4e2a-f033-b6b96098109f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +527,7 @@
         "id": "aahjvWDmkn1u",
         "outputId": "39113ddc-265e-44a7-c0aa-189200086d8d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,29 +547,29 @@
       "metadata": {
         "id": "5sYIQBxLktqm"
       },
-      "execution_count": 40,
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part1[np.where(part1 == 0)] = 1e-5"
+        "part1[np.where(part1 == 0)] = 10 ** (-16)"
       ],
       "metadata": {
         "id": "5rpjc1ySlCoA"
       },
-      "execution_count": 41,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "part2[np.where(part2 == 0)] = 1e-5"
+        "part2[np.where(part2 == 0)] = 10 ** (-16)"
       ],
       "metadata": {
         "id": "REiL2FU_lZHL"
       },
-      "execution_count": 42,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -550,7 +582,7 @@
       "metadata": {
         "id": "4q7pkqepm_9A"
       },
-      "execution_count": 43,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -560,10 +592,27 @@
         "del part2"
       ],
       "metadata": {
-        "id": "MYIwBik1mi_d"
+        "id": "MYIwBik1mi_d",
+        "outputId": "3ebdde72-560f-4a11-ed80-5664f5ea26b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        }
       },
-      "execution_count": 44,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'part1' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-cfa7a7b04a7c>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mpart1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mpart2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'part1' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -575,17 +624,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HIc3cVe3mnIp",
-        "outputId": "4f249ea8-ce85-4758-cff5-2234fc05d1fa"
+        "outputId": "0c087ab5-4eb6-4663-bc63-98b91a81c292"
       },
-      "execution_count": 45,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-45-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-32-f9dd387c4ab2>:1: RuntimeWarning: divide by zero encountered in log\n",
             "  H1 = Data1 * np.log(Data2)\n",
-            "<ipython-input-45-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
+            "<ipython-input-32-f9dd387c4ab2>:1: RuntimeWarning: invalid value encountered in multiply\n",
             "  H1 = Data1 * np.log(Data2)\n"
           ]
         }
@@ -601,7 +650,7 @@
       "metadata": {
         "id": "uFaD6cvgn6YR"
       },
-      "execution_count": 38,
+      "execution_count": 22,
       "outputs": []
     }
   ],
